Fixes vih/vih-build#48 Layout of short courses breaks in Mozilla
panopoly spotlight image to width: 100%

--- a/assets/sass/partials/_vih.scss
+++ b/assets/sass/partials/_vih.scss
@@ -155,3 +155,6 @@ form.commerce-add-to-cart {
 .pane-content {
   margin-bottom: 1em;
 }
+.field img.panopoly-image-spotlight {
+  width: 100%;
+}
